src/global/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background-color: #0f0f0f;
  --text-color: #f1f1f1;
}

body {
  color-scheme: dark;
  scroll-behavior: smooth;
  background-color: var(--background-color);
  color: var(--text-color);
}

/* App Drawer */
.drawer-open {
  transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
  transform: translateX(0);
}

.drawer-closed {
  transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
  transform: translateX(-100%);
}

@media only screen and (min-width: 768px) {
  ::-webkit-scrollbar {
    width: unset;
  }

  body::-webkit-scrollbar-thumb {
    height: 56px;
    border-radius: 8px;
    border: 4px solid transparent;
    background-clip: content-box;
    background-color: #aaaaaa;
  }

  body::-webkit-scrollbar {
    width: 16px;
    background-color: #202020;
  }

  .scroll-border {
    border-right: 16px solid #202020;
  }
}

@supports (-webkit-touch-callout: none) {
  /* CSS specific to iOS devices */
  .scroll-border {
    border-right: unset;
  }
}

